# gitwasm

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SPEC.md
.github/workflows/: ci.yml  release.yml
.gitwasm/: cargo-lock-merge.wasm  commit-lint.wasm  lineset-merge.wasm  lockfile-merge.wasm  manifest.toml  pnpm-lock-merge.wasm  secret-scan.wasm  signatures.toml
crates/gitwasm/: Cargo.toml  build.rs
crates/gitwasm/src/: commands.rs  gitutil.rs  main.rs  manifest.rs  runner.rs  signing.rs  stock.rs  verdict.rs
demo/: demo-signing-key  run-demo.ps1  run-demo.sh
docs/: ci.md
docs/superpowers/plans/: 2026-07-07-real-fork-demo-repo.md
docs/superpowers/specs/: 2026-07-06-gitwasm-adoption-roadmap-design.md
modules/cargo-lock-merge/: Cargo.toml
modules/commit-lint/: Cargo.toml
modules/lineset-merge/: Cargo.toml
modules/lineset-merge/src/: lib.rs  main.rs
modules/lockfile-merge/: Cargo.toml
modules/lockfile-merge/src/: main.rs
modules/pnpm-lock-merge/: Cargo.toml
modules/pnpm-lock-merge/src/: main.rs
modules/poetry-lock-merge/: Cargo.toml
modules/poetry-lock-merge/src/: main.rs
modules/secret-scan/: Cargo.toml
modules/yarn-lock-merge/: Cargo.toml
modules/yarn-lock-merge/src/: main.rs
wit/: driver.wit
