[workspace]
resolver = "2"
members = [
    "crates/gitwasm",
    "modules/lockfile-merge",
    "modules/cargo-lock-merge",
    "modules/lineset-merge",
    "modules/yarn-lock-merge",
    "modules/poetry-lock-merge",
    "modules/secret-scan",
    "modules/commit-lint",
]
default-members = ["crates/gitwasm"]
