[package]
name = "gitwasm"
version = "0.3.0"
edition = "2021"
description = "Git extension points (hooks, merge drivers) as sandboxed WebAssembly modules committed to the repo itself"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gitwasm/gitwasm"
build = "build.rs"

[dependencies]
anyhow = "1"
ed25519-dalek = "2"
getrandom = "0.2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
wasmtime = "38"
wasmtime-wasi = { version = "38", features = ["p1"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
# Turns the wasm32-unknown-unknown core module built from a component module
# into a WASI 0.2 component, reading the WIT type section wit-bindgen embedded.
wit-component = "0.244"

[dev-dependencies]
wat = "1"
